Fixed seach bar spacing

--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,6 @@ input[type="checkbox"] {
     justify-content: center;
     gap: 30px;
     padding: 30px;
-    padding-top: 40px;
     margin: 0;
     list-style: none;
 }
